package description updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_podium
-description: "A beautiful 3D Podium Widget to display Rankings"
+description: "Enhance your Flutter app with a sleek 3D Podium Widget for stunning ranking displays, adding visual appeal and engagement to your interface."
 version: 1.0.2
 homepage: https://github.com/ThrivikramGR/flutter_podium
 
